<resources>
    <string name="app_name">MyGarden</string>
    <string name="MyPlants">Мои растения</string>
    <string name="Add">Добавить</string>
    <string name="Profile">Профиль</string>
    <string name="Guide">Справочник</string>
    <string name="Settings">Настройки</string>
    <string name="Information">Справка</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Поиск</string>
    <string name="UserName">Имя пользователя:</string>
    <string name="theNumberOfYourPlants">Количество ваших растений:</string>
    <string name="watering">Полить</string>
    <string name="before_watering">частота полива</string>
    <string name="light">свет</string>
    <string name="make_plant">Создать своё</string>
    <string name="enter_name">Введите название растения</string>
    <string name="AddImg">Добавить изображение</string>
    <string name="Name">Название</string>
    <string name="PlantName">Введите имя растения</string>
    <string name="CreatePlant">Создание растения</string>
    <string name="Description">Описание</string>
    <string name="PlantDescription">Введите описание</string>
    <string name="WateringFrequency">Как часто надо поливать?</string>
    <string name="Water">Поливать</string>
    <string name="Counts">раз в&#160;</string>
    <string name="SunType">Какой свет любит?</string>
    <string name="Create">Создать</string>
    <string name="Developers">Разработчики</string>
    <string name="hyperlinkDev1"><a href="https://github.com/Almaz021">Almaz021</a></string>
    <string name="hyperlinkDev2"><a href="https://github.com/shcherbanev1">shcherbanev1</a></string>
    <string name="hyperlinkDev3"><a href="https://github.com/StrelnikovaL">StrelnikovaL</a></string>
    <string name="hyperlinkDev4"><a href="https://github.com/IMART0">IMART0</a></string>
    <string name="hyperlinkDev5"><a href="https://github.com/pashtevlenti">pashtevlenti</a></string>
    <string name="Version">version:&#160;</string>
    <string name="versionId">0.0.1</string>
</resources>