<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.myPlant.MyPlantFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/plant_img"
        android:layout_width="267dp"
        android:layout_height="317dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/tool_plant" />

    <TextView
        android:id="@+id/name_plant_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Растение"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/plant_img"
        app:layout_constraintStart_toStartOf="@id/plant_img"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:scrollbars="vertical"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="@id/name_plant_text"
        app:layout_constraintTop_toBottomOf="@id/name_plant_text"
        android:fillViewport="true">
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="Какое-то большое описание растения, что оно там из семейства кактусовых или что-то типо того" />

    </ScrollView>
    <ImageView
        android:id="@+id/shape_high"
        android:layout_width="92dp"
        android:layout_height="72dp"
        android:src="@drawable/information_plant_backgr"
        app:layout_constraintBottom_toTopOf="@+id/shape_low"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plant_img"
        app:layout_constraintTop_toTopOf="@id/plant_img"/>

    <ImageView
        android:id="@+id/sun_item"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_wb_sunny_24"
        app:layout_constraintTop_toTopOf="@id/shape_high"
        app:layout_constraintStart_toStartOf="@id/shape_high"
        app:layout_constraintEnd_toEndOf="@id/shape_high"
        app:layout_constraintBottom_toTopOf="@id/value_light"/>
    <TextView
        android:id="@+id/value_light"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sun_item"
        app:layout_constraintStart_toStartOf="@id/shape_high"
        app:layout_constraintEnd_toEndOf="@id/shape_high"
        app:layout_constraintBottom_toTopOf="@id/description_light"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="Умеренный"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="@id/shape_high"
        app:layout_constraintStart_toStartOf="@id/shape_high"
        app:layout_constraintBottom_toBottomOf="@id/shape_high"
        app:layout_constraintTop_toBottomOf="@id/value_light"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:text="@string/light" />


    <ImageView
        android:id="@+id/shape_low"
        android:layout_width="92dp"
        android:layout_height="72dp"
        android:src="@drawable/information_plant_backgr"
        app:layout_constraintBottom_toBottomOf="@id/plant_img"
        app:layout_constraintTop_toBottomOf="@+id/shape_high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plant_img"/>
    <ImageView
        android:id="@+id/calendar_item"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintTop_toTopOf="@id/shape_low"
        app:layout_constraintStart_toStartOf="@id/shape_low"
        app:layout_constraintBottom_toTopOf="@id/value_watering"
        app:layout_constraintEnd_toEndOf="@id/shape_low"/>

    <TextView
        android:id="@+id/value_watering"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/shape_low"
        app:layout_constraintStart_toStartOf="@id/shape_low"
        app:layout_constraintBottom_toTopOf="@id/description_watering"
        app:layout_constraintTop_toBottomOf="@id/calendar_item"
        tools:text="2 дня"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/description_watering"
        android:layout_width="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="8sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/shape_low"
        app:layout_constraintStart_toStartOf="@id/shape_low"
        app:layout_constraintBottom_toBottomOf="@id/shape_low"
        app:layout_constraintTop_toBottomOf="@id/value_watering"
        android:text="@string/before_watering"
        android:textColor="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_watering"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/text_watering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SCROLLER_ID"/>
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@id/button_watering"
            android:src="@drawable/baseline_water_drop_24"
            app:layout_constraintBottom_toBottomOf="@id/button_watering"
            app:layout_constraintStart_toStartOf="@id/button_watering"
            app:layout_constraintEnd_toEndOf="@id/button_watering"
            />

    <TextView
        android:id="@+id/text_watering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_watering"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/watering"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pour"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/orange"
        android:src="@drawable/water"
        app:layout_constraintEnd_toEndOf="@id/plant_img"
        app:layout_constraintTop_toTopOf="@id/plant_img"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="44dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>